.nowrap → .no-wrap-code

--- a/pandoc/html_template.html
+++ b/pandoc/html_template.html
@@ -27,7 +27,7 @@
     </script>
   </head>
   <body>
-    <div class="post nowrap">
+    <div class="post no-wrap-code">
       $if(title)$
         <h1 class="title">$title$</h1>
       $endif$
