Add data-guess-code-syntax attribute to <body>.

--- a/pandoc/html_template.html
+++ b/pandoc/html_template.html
@@ -26,7 +26,7 @@
       (function(B,C){B[C]=B[C].replace(/\bnojs\b/,'js')})(document.documentElement,'className');
     </script>
   </head>
-  <body>
+  <body data-guess-code-syntax="true">
     <div class="post no-wrap-code">
       $if(title)$
         <h1 class="title">$title$</h1>
